// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Film item correctly renders with isPlaying false 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <a
    href="/film/1"
    onClick={[Function]}
  >
    <div
      className="small-movie-card__image"
      onMouseOut={[MockFunction]}
      onMouseOver={[Function]}
    >
      <img
        alt="War of the Worlds"
        height="175"
        src="https://es31-server.appspot.com/wtw/static/film/preview/war-of-the-worlds.jpg"
        width="280"
      />
    </div>
  </a>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="/film/1"
      onClick={[Function]}
    >
      War of the Worlds
    </a>
  </h3>
</article>
`;

exports[`Film item correctly renders with isPlaying true 1`] = `
<article
  className="small-movie-card catalog__movies-card"
>
  <a
    href="/film/1"
    onClick={[Function]}
  >
    <div
      className="small-movie-card__image"
      onMouseOut={[MockFunction]}
      onMouseOver={[Function]}
    >
      <video
        className="player__video"
        muted={true}
        src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
      />
    </div>
  </a>
  <h3
    className="small-movie-card__title"
  >
    <a
      className="small-movie-card__link"
      href="/film/1"
      onClick={[Function]}
    >
      War of the Worlds
    </a>
  </h3>
</article>
`;
